--- a/lab-list-comprehensions/your-code/main.ipynb
+++ b/lab-list-comprehensions/your-code/main.ipynb
@@ -107,6 +107,8 @@
     }
    ],
    "source": [
+    "# range(len(x)) allows us to iterate exactly the times needed independenly of the lenght of each subarray x  (prevents from\n",
+    "#comming short and going out of bounds).   range(len(x))=range(0,n) where n is the size of x.\n",
     "print([x[i] for x in a for i in range(len(x))])"
    ]
   },
@@ -177,6 +179,8 @@
     }
    ],
    "source": [
+    "#Lets notice that x is an element(array) of b containing 2 arrays. x[i] calls each of these two arrays, and x[i][j]\n",
+    "#finally calls element j of subarray x[i] (len(x) and len(x[i]) are used for the same reason as mentioned before).\n",
     "print([x[i][j] for x in b for i in range(len(x)) for j in range(len(x[i]))])"
    ]
   },
@@ -201,6 +205,7 @@
     }
    ],
    "source": [
+    "#j==(len(x[i])-1) assures that x[i][j] is the last element of subarray x[i] (j=n-1 where n=len(x[i]))\n",
     "print([x[i][j] for x in b for i in range(len(x)) for j in range(len(x[i])) if j==(len(x[i])-1) and x[i][j]<=0.5])"
    ]
   },
@@ -575,7 +580,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 8. Use a list comprehension to select and print the column numbers for columns from the data set whose median is less than 0.48."
@@ -971,6 +976,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#i in range(len(df[x])) serves the same purpose as mentioned above(preventing from staying short or going out of bounds).\n",
     "values_between=[df.iloc[i][x] for x in df for i in range(len(df[x])) if 0.7<df.iloc[i][x]<0.75]"
    ]
   },
