--- a/lab-list-comprehensions/your-code/main.ipynb
+++ b/lab-list-comprehensions/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "#Lets notice that x is an element(array) of b containing 2 arrays. x[i] calls each of these two arrays, and x[i][j]\n",
+    "#Let's notice that x is an element(array) of b containing 2 arrays. x[i] calls each of these two arrays, and x[i][j]\n",
     "#finally calls element j of subarray x[i] (len(x) and len(x[i]) are used for the same reason as mentioned before).\n",
     "print([x[i][j] for x in b for i in range(len(x)) for j in range(len(x[i]))])"
    ]
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "#j==(len(x[i])-1) assures that x[i][j] is the last element of subarray x[i] (j=n-1 where n=len(x[i]))\n",
+    "#j==(len(x[i])-1) ensures that x[i][j] is the last element of subarray x[i] (j=n-1 where n=len(x[i]))\n",
     "print([x[i][j] for x in b for i in range(len(x)) for j in range(len(x[i])) if j==(len(x[i])-1) and x[i][j]<=0.5])"
    ]
   },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "4  0.588567  0.604341  0.232964  0.229109  0.022881  0.479022  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,17 +972,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#i in range(len(df[x])) serves the same purpose as mentioned above(preventing from staying short or going out of bounds).\n",
+    "#i in range(len(df[x])) serves the same purpose as mentioned above(preventing from staying short or going out of bounds\n",
+    "# when interating through column x).\n",
     "values_between=[df.iloc[i][x] for x in df for i in range(len(df[x])) if 0.7<df.iloc[i][x]<0.75]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
